# Jetson_Ws

Jetson_ws/src/control/: package.xml  setup.py
Jetson_ws/src/control/control/: control_node.py  navigation.py
Jetson_ws/src/ff_interface/: CMakeLists.txt  package.xml
Jetson_ws/src/ff_interface/msg/: ArucoDetections.msg
Jetson_ws/src/ff_interface/srv/: ConveyorConnection.srv  ConveyorRun.srv  RobotControl.srv  SelectedJob.srv
